--- a/Web/Pages/CCGMember/CurrentLevel.cshtml
+++ b/Web/Pages/CCGMember/CurrentLevel.cshtml
@@ -31,7 +31,7 @@
             {
                 var routedata = new Dictionary<string, string>
                         {
-                              { "id",  id.ToString()},
+                              { "id",  Model.Id.ToString()},
                               { "level",  level}
                          };
         <li role="presentation">
