--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -3,16 +3,16 @@
 @inject IViewLocalizer Localizer
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-    var cur = Model.curposition;
-    var obj = Model.objposition;
-    var match1 = Model.matchingcomp1;
-    var diff1 = Model.diffcomp1;
-    var match2 = Model.matchingcomp2;
-    var diff2 = Model.diffcomp2;
-    var match3 = Model.matchingcomp3;
-    var diff3 = Model.diffcomp3;
-    var matchcert = Model.matchcert;
-    var diffcert = Model.diffcert;
+    var current = Model.CurrentPosition;
+    var objective = Model.ObjectivePosition;
+    var matchingtype1 = Model.MatchingCompetenciesType1;
+    var differingtype1 = Model.DifferingCompetenciesType1;
+    var matchingtype2 = Model.MatchingCompetenciesType2;
+    var differingtype2 = Model.DifferingCompetenciesType2;
+    var matchingtype3 = Model.MatchingCompetenciesType3;
+    var differingtype3 = Model.DifferingCompetenciesType3;
+    var matchingcertificates = Model.MatchingCertificates;
+    var differingcertificates = Model.DifferingCertificates;
 }
     <section role="contentinfo">
         <div class="row mrgn-tp-md">
@@ -26,57 +26,37 @@
             <table class="table table-bordered table-responsive" width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
-                        <td class="bg-success" width="50%"><b>@Localizer["Current Position"]:</b> @cur.JobGroupCode @cur.JobGroupLevelValue - @(isEnglish?cur.JobTitleEng:cur.JobTitleFre)</td>
-                        <td class="bg-info" width="50%"><b>@Localizer["Selected Position"]:</b> @obj.JobGroupCode @obj.JobGroupLevelValue - @(isEnglish?obj.JobTitleEng:obj.JobTitleFre)</td>
+                        <td class="bg-success" width="50%"><b>@Localizer["Current Position"]:</b> @current.JobGroupCode @current.JobGroupLevelValue - @(isEnglish?current.JobTitleEng:current.JobTitleFre)</td>
+                        <td class="bg-info" width="50%"><b>@Localizer["Selected Position"]:</b> @objective.JobGroupCode @objective.JobGroupLevelValue - @(isEnglish?objective.JobTitleEng:objective.JobTitleFre)</td>
                     </tr>
                 </tbody>
             </table>
+
             <h3>@Localizer["MATCHING COMPETENCIES"]</h3>
+
             <table class="table table-responsive table-bordered">
+
                 <tr>
                     <th style="background-color:#f2f2f2" width="50%">@Localizer["CERTIFICATIONS"]</th>
                     <th style="background-color:#f2f2f2" width="50%">@Localizer["TECHNICAL ELEMENTS"]</th>
                 </tr>
-                @if (match2.Count >= matchcert.Count)
+
+                @if (matchingtype2.Length >= matchingcertificates.Length)
                 {
-                    @for (int i = 0; i < match2.Count; i++)
+                    @for (int i = 0; i < matchingtype2.Length; i++)
                     {
-                        if (i < matchcert.Count)
+                        if (i < matchingcertificates.Length)
                         {
                             <tr>
-                                <td width="50%">@(isEnglish?matchcert[i].NameEng:matchcert[i].NameFre)</td>
-                                <td width="50%">@(isEnglish?match2[i].CompetencyNameEng:match2[i].CompetencyNameFre)</td>
+                                <td width="50%">@(isEnglish?matchingcertificates[i].NameEng:matchingcertificates[i].NameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype2[i].CompetencyNameEng:matchingtype2[i].CompetencyNameFre)</td>
                             </tr>
                         }
                         else
                         {
                             <tr>
                                 <td width="50%">@null</td>
-                                <td width="50%">@(isEnglish?match2[i].CompetencyNameEng:match2[i].CompetencyNameFre)</td>
-                            </tr>
-                        }
-                    }
-                    <tr>
-                        <td width="50%"></td>
-                        <td width="50%"></td>
-                    </tr>
-                }
-                else if (matchcert.Count > match2.Count)
-                {
-                    @for (int i = 0; i < matchcert.Count; i++)
-                    {
-                        if (i < match2.Count)
-                        {
-                            <tr>
-                                <td width="50%">@(isEnglish?matchcert[i].NameEng:matchcert[i].NameFre)</td>
-                                <td width="50%">@(isEnglish?match2[i].CompetencyNameEng:match2[i].CompetencyNameFre)</td>
-                            </tr>
-                        }
-                        else
-                        {
-                            <tr>
-                                <td width="50%">@(isEnglish?matchcert[i].NameEng:matchcert[i].NameFre)</td>
-                                <td width="50%">@null</td>
+                                <td width="50%">@(isEnglish?matchingtype2[i].CompetencyNameEng:matchingtype2[i].CompetencyNameFre)</td>
                             </tr>
                         }
                     }
@@ -87,6 +67,23 @@
                 }
                 else
                 {
+                    @for (int i = 0; i < matchingcertificates.Length; i++)
+                    {
+                        if (i < matchingtype2.Length)
+                        {
+                            <tr>
+                                <td width="50%">@(isEnglish?matchingcertificates[i].NameEng:matchingcertificates[i].NameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype2[i].CompetencyNameEng:matchingtype2[i].CompetencyNameFre)</td>
+                            </tr>
+                        }
+                        else
+                        {
+                            <tr>
+                                <td width="50%">@(isEnglish?matchingcertificates[i].NameEng:matchingcertificates[i].NameFre)</td>
+                                <td width="50%">@null</td>
+                            </tr>
+                        }
+                    }
                     <tr>
                         <td width="50%"></td>
                         <td width="50%"></td>
@@ -96,46 +93,22 @@
                     <th style="background-color:#f2f2f2" width="50%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
                     <th style="background-color:#f2f2f2" width="50%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
                 </tr>
-                @if (match1.Count >= match3.Count)
+                @if (matchingtype1.Length >= matchingtype3.Length)
                 {
-                    @for (int i = 0; i < match1.Count; i++)
+                    @for (int i = 0; i < matchingtype1.Length; i++)
                     {
-                        if (i < match3.Count)
+                        if (i < matchingtype3.Length)
                         {
                             <tr>
-                                <td width="50%">@(isEnglish?match1[i].CompetencyNameEng:match1[i].CompetencyNameFre)</td>
-                                <td width="50%">@(isEnglish?match3[i].CompetencyNameEng:match3[i].CompetencyNameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype1[i].CompetencyNameEng:matchingtype1[i].CompetencyNameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype3[i].CompetencyNameEng:matchingtype3[i].CompetencyNameFre)</td>
                             </tr>
                         }
                         else
                         {
                             <tr>
-                                <td width="50%">@(isEnglish?match1[i].CompetencyNameEng:match1[i].CompetencyNameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype1[i].CompetencyNameEng:matchingtype1[i].CompetencyNameFre)</td>
                                 <td width="50%">@null</td>
-                            </tr>
-                        }
-                    }
-                    <tr>
-                        <td width="50%"></td>
-                        <td width="50%"></td>
-                    </tr>
-                }
-                else if (match3.Count > match1.Count)
-                {
-                    @for (int i = 0; i < match3.Count; i++)
-                    {
-                        if (i < match1.Count)
-                        {
-                            <tr>
-                                <td width="50%">@(isEnglish?match1[i].CompetencyNameEng:match1[i].CompetencyNameFre)</td>
-                                <td width="50%">@(isEnglish?match3[i].CompetencyNameEng:match3[i].CompetencyNameFre)</td>
-                            </tr>
-                        }
-                        else
-                        {
-                            <tr>
-                                <td width="50%">@null</td>
-                                <td width="50%">@(isEnglish?match3[i].CompetencyNameEng:match3[i].CompetencyNameFre)</td>
                             </tr>
                         }
                     }
@@ -146,6 +119,23 @@
                 }
                 else
                 {
+                    @for (int i = 0; i < matchingtype3.Length; i++)
+                    {
+                        if (i < matchingtype1.Length)
+                        {
+                            <tr>
+                                <td width="50%">@(isEnglish?matchingtype1[i].CompetencyNameEng:matchingtype1[i].CompetencyNameFre)</td>
+                                <td width="50%">@(isEnglish?matchingtype3[i].CompetencyNameEng:matchingtype3[i].CompetencyNameFre)</td>
+                            </tr>
+                        }
+                        else
+                        {
+                            <tr>
+                                <td width="50%">@null</td>
+                                <td width="50%">@(isEnglish?matchingtype3[i].CompetencyNameEng:matchingtype3[i].CompetencyNameFre)</td>
+                            </tr>
+                        }
+                    }
                     <tr>
                         <td width="50%"></td>
                         <td width="50%"></td>
@@ -160,22 +150,18 @@
                     <th class="text-center bg-info">@Localizer["Selected Position"]</th>
                 </tr>
                 <tbody>
-                    @if (diffcert.Count == 0)
+
+                    @if (differingcertificates.Length == 0)
                     {
                         <tr>
                             <td width="70%"></td>
                             <td class="text-center bg-success"></td>
                             <td class="text-center bg-info"></td>
                         </tr>
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
                     else
                     {
-                        @foreach (var d in diffcert)
+                        @foreach (var d in differingcertificates)
                         {
                             <tr>
 
@@ -184,70 +170,59 @@
                                 <td class="text-center bg-info"></td>
                             </tr>
                         }
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
+                    <tr>
+                        <td width="70%"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <tr>
                         <th style="background-color:#f2f2f2" width="70%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
                         <th class="text-center bg-success">@Localizer["Current Position"]</th>
                         <th class="text-center bg-info">@Localizer["Selected Position"]</th>
                     </tr>
 
-                    @if (diff1.Count == 0)
+                    @if (differingtype1.Length == 0)
                     {
                         <tr>
                             <td width="70%"></td>
                             <td class="text-center bg-success"></td>
                             <td class="text-center bg-info"></td>
                         </tr>
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
                     else
                     {
-                        @foreach (var d in diff1)
+                        @foreach (var d in differingtype1)
                         {
                             <tr>
-
                                 <td width="70%">@(isEnglish?d.CompetencyNameEng:d.CompetencyNameFre)</td>
                                 <td class="text-center bg-success">@d.RatingValueCur</td>
                                 <td class="text-center bg-info">@d.RatingValueObj</td>
                             </tr>
                         }
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
+                    <tr>
+                        <td width="70%"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <tr>
                         <th style="background-color:#f2f2f2" width="70%">@Localizer["TECHNICAL ELEMENTS"]</th>
                         <th class="text-center bg-success">@Localizer["Current Position"]</th>
                         <th class="text-center bg-info">@Localizer["Selected Position"]</th>
                     </tr>
 
-                    @if (diff2.Count == 0)
+                    @if (differingtype2.Length == 0)
                     {
                         <tr>
                             <td width="70%"></td>
                             <td class="text-center bg-success"></td>
                             <td class="text-center bg-info"></td>
                         </tr>
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
                     else
                     {
-                        @foreach (var d in diff2)
+                        @foreach (var d in differingtype2)
                         {
                             <tr>
 
@@ -256,34 +231,29 @@
                                 <td class="text-center bg-info">@d.RatingValueObj</td>
                             </tr>
                         }
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
+                    <tr>
+                        <td width="70%"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <tr>
                         <th style="background-color:#f2f2f2" width="70%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
                         <th class="text-center bg-success">@Localizer["Current Position"]</th>
                         <th class="text-center bg-info">@Localizer["Selected Position"]</th>
                     </tr>
 
-                    @if (diff3.Count == 0)
+                    @if (differingtype3.Length == 0)
                     {
                         <tr>
                             <td width="70%"></td>
                             <td class="text-center bg-success"></td>
                             <td class="text-center bg-info"></td>
                         </tr>
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
                     else
                     {
-                        @foreach (var d in diff3)
+                        @foreach (var d in differingtype3)
                         {
                             <tr>
 
@@ -292,12 +262,12 @@
                                 <td class="text-center bg-info">@d.RatingValueObj</td>
                             </tr>
                         }
-                        <tr>
-                            <td width="70%"></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     }
+                    <tr>
+                        <td width="70%"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                 </tbody>
             </table>
     </section>
