--- a/Web/Pages/CCGMember/CurrentPosition.cshtml
+++ b/Web/Pages/CCGMember/CurrentPosition.cshtml
@@ -3,19 +3,17 @@
 @model Web.Pages.CCGMember.CurrentPositionModel
 @inject IHttpContextAccessor contextAccessor
 @inject IViewLocalizer Localizer
-@{
-    var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-    var id = Model.Id;
-    var jobPositions = Model.JobGroupPositions;
-    var levels = Model.JobGroupLevels.Select(e => e.LevelValue).ToList().Distinct();
-    var JobGroupName = isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre;
-
+@{ var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
+                var jobPositions = Model.JobGroupPositions;
+                var levels = Model.JobGroupLevels.Select(e => e.LevelValue).ToList().Distinct();
+                var JobGroupName = isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre;
 }
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <h2><b>@Localizer["h2Text"]</b></h2>
+
 <figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /> </figure>
 <h3><b>@JobGroupName (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
@@ -30,15 +28,16 @@
             {
                 var routedata = new Dictionary<string, string>
                      {
-                          { "id",  id.ToString()},
-                          { "level",  Model.Level.ToString()}
+                          { "id",  Model.Id.ToString()},
+                          { "level",  level.ToString()}
                       };
 <li role="presentation">
     <a role="menuitem" tabindex="-1"
        asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Level"] @level</a>
-</li>}
+</li>
+}
         </ul>
-</div>
+    </div>
     <div class="col-sm-3">
         <label><b>@Localizer["Position"]</b></label><br />
         <button class="dropdown-toggle" id="menu1" type="button" width="100%" data-toggle="dropdown">
@@ -46,41 +45,30 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            @if (isEnglish)
+
+            @foreach (var jp in jobPositions)
             {
-                foreach (var jp in jobPositions)
-                {
-                    var routedata = new Dictionary<string, string>
+                var routedata = new Dictionary<string, string>
                         {
-                        { "id",  id.ToString()},
+                        { "id",  Model.Id.ToString()},
                         { "level",  Model.Level.ToString()},
                         { "positionid", jp.JobTitleId.ToString()}
                      };
-    <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-all-route-data="routedata">@jp.JobTitleEng</a></li> }
-            }
-            else
-            {
-                foreach (var jp in jobPositions)
-                {
-                    var routedata = new Dictionary<string, string>
-                        {
-                        { "id",  id.ToString()},
-                        { "level",  Model.Level.ToString()},
-                        { "positionid", jp.JobTitleId.ToString()}
-                     };
-    <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-all-route-data="routedata">@jp.JobTitleFre</a></li>}
-                }
+<li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-all-route-data="routedata">@(isEnglish ? jp.JobTitleEng : jp.JobTitleFre)</a></li>
+
+}
+
         </ul>
     </div>
 </div>
-    <div class="row">
-        <div class="col-sm-12 mrgn-bttm-md">
-            <nav role="navigation" class="mrgn-bttm-lg">
-                <h2 class="wb-inv">Document navigation</h2>
-                <ul class="pager">
-                    <li class="previous"><a asp-page="CurrentLevel" asp-route-id="@id">@Localizer["Previous"]</a></li>
-                </ul>
-            </nav>
-        </div>
+<div class="row">
+    <div class="col-sm-12 mrgn-bttm-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a asp-page="CurrentLevel" asp-route-id="@Model.Id">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
     </div>
+</div>
 
